--- a/pizza.html
+++ b/pizza.html
@@ -3,6 +3,7 @@
 <head><title>EATaliano's Kitchen</title></head>
 
 <!--this is an edit from github-->
+<!--this is an edit from vsc-->
 
 
 <main>EATaliano's Kitchen</main>
